[package]
name = "amethystOS"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
x86_64 = "0.14.7"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"

[profile.dev]

[profile.release]
lto = true

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33